<resources>
    <string name="app_name">网络监控</string>
    <string name="title">Andorid监控</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="appName">应用名</string>
    <string name="packetName">包名</string>
    <string name="perSetting">权限设置</string>
    <string name="TrafficDiary">流量日志</string>
    <string name="ApplicationFlow">应用流量</string>
    <string name="piechart">流量分析</string>
    <string name="WIFINetwork">WIFI网络</string>
    <string name="Network">移动+WIFI网络</string>
    <string name="RxFlow">接收数据花费流量</string>
    <string name="TxFlow">上传数据花费流量</string>
    <string name="TotalFlow">总花费流量</string>
    <string name="chartType">类型:</string>
    <string name="packetGrab">数据抓取</string>
    <string name="ChartNoData">暂未花费流量</string>
    <string name="Prompt">(只统计总流量大于0.3%的应用)</string>
    <string name="Columnar">柱状</string>
    <string name="Receive">接收</string>
    <string name="Send">发送</string>
    <string name="Spend">花费</string>
    <string name="Setting">应用设置</string>
    <string name="Unlogin">退出应用</string>
    <string name="_traffic_diary_sort_text">排序类型</string>
    <string name="AgainExit">再按一次退出应用</string>
    <string name="Confirmation_of_withdrawal">是否确认退出应用？</string>
    <string name="YesExit">是的,退出应用</string>
    <string name="NoExit">取消</string>
    <string name="total">总</string>
    <string name="rise">升</string>
    <string name="drop">降</string>
    <string name="Other">作者</string>
    <string name="Edition">版本</string>
    <string name="Tip">提示</string>
    <string name="DialogMes">捕获数据包可能需要花费更多的流量，是否继续?</string>
    <string name="NoData">无数据</string>
    <string name="SDK_no_VPN">当前版本的android 不支持vpnservice</string>
    <string name="ApplicationNetworkingNotifications">应用联网通知</string>
    <string name="NetworkInterception">的访问已被拦截</string>
    <string name="AccessNetwork">尝试访问网络..</string>
    <string name="DetailedInformation">详细信息</string>
    <string name="TextType">文本类型</string>
    <string name="CaptureText">数据包捕获</string>
    <string name="staup">开始</string>
    <string name="selectApp">请选择要捕获的应用程序</string>
    <string name="pinyin">支持拼音首字母(微信:wx)</string>
    <string name="Languagechange">更改</string>
    <string name="LanguageSet">语言设置</string>
    <string name="ch">简体中文</string>
    <string name="en">英文</string>
    <string name="Language">当前语言</string>

</resources>
