<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginTop="20px"
        android:layout_marginBottom="20px"
        android:layout_marginRight="20px"
        android:layout_marginLeft="20px"
        android:background="#fff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_weight="1"
            android:id="@+id/packet_list_layout_img"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <LinearLayout
            android:layout_weight="10"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <TextView
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/appName"
                    android:textSize="18sp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/appName"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text=""
                    android:textSize="20sp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <TextView
                    android:layout_weight="2"
                    android:text="@string/packetName"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/packetName"
                    android:layout_weight="8"
                    android:gravity="center"
                    android:text=""
                    android:textSize="15sp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/perSetting"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_marginLeft="50dp"
                        android:background="@drawable/stoke"
                        android:gravity="center"
                        android:layout_width="150dp"
                        android:layout_height="match_parent">
                        <Spinner
                            android:gravity="center"
                            android:entries="@array/perType"
                            android:id="@+id/packet_list_layout_sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        </Spinner>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>
